# instagram-clone

./: .dockerignore  .gitignore  Dockerfile  README.md  Untitled.ipynb  deploy-docker.sh  deploy.sh  docker-run-local.py  docker-run-server.py  docker-run.py  docker-setup.sh  pyproject.toml  requirements.txt  secretsmanager.ipynb  test.py
.config/: gunicorn_server.py  instagram.nginx  instagram_server.nginx  supervisord.conf  supervisord_server.conf
app/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  manage.py  쿼리셋연습.ipynb
app/config/: settings.py  settings_env.py  urls.py  views.py  wsgi.py
app/members/: admin.py  apis.py  forms.py  models.py  serialrizers.py  urls.py  urls_apis.py  views.py
app/members/migrations/: 0002_user_img_profile.py  0003_remove_user_img_profile.py  0004_user_name.py
app/members/urls/: apis.py  views.py
app/posts/: admin.py  apis.py  forms.py  models.py  serializers.py  urls.py  views.py
app/posts/management/commands/: stats.py
app/posts/migrations/: 0001_initial.py  0003_tag.py  0004_auto_20200114_1437.py  0005_auto_20200114_1444.py  0006_auto_20200114_1538.py  0007_post_content_html.py
app/posts/urls/: apis.py  views.py
app/templates/: base.html  comment_list.html  index.html
app/templates/members/: login.html  signup.html
app/templates/posts/: post-create.html  post-list.html
